@@ -337,6 +337,7 @@ static player *get_player(player *p) {
     p->no_shout = 0;   /* default can shout */
     p->language = 0;
     p->unarmed_skill = NULL;
+    p->ticks_played = 0; 
 
     strncpy(p->title, op->arch->clone.name, sizeof(p->title)-1);
     p->title[sizeof(p->title)-1] = '\0';
